--- a/ps.yml
+++ b/ps.yml
@@ -2,14 +2,9 @@
   tasks:
     - name: Create non admin user on Active Directory and add in local groups
       block:
-        - name: Create user
-          win_command:
-            cmd: net user "{{ username }}" "{{ pwd }}" /add /domain /yes
-          when: create_ad_user == "true"
-
         - name: Retrieve DNS suffix on Windows
           win_shell: |
-              ipconfig /all | Select-String "DNS Suffix Search List" | ForEach-Object { $_.ToString().Split("":"")[1].Trim() }
+              ipconfig /all | Select-String "DNS Suffix Search List" | ForEach-Object { $_.ToString().Split(:)[1].Trim() }
           register: suffix_dns
           changed_when: false
         - debug:
